hphp/hack/test/typecheck/control_flow/for_undefined.php.exp
File "for_undefined.php", line 6, characters 8-9:
Variable $x is undefined, or not always defined (Naming[2050])
